[package]
name = "axum-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3.31"
rumqttc = { version = "0.24.0", features = ["websocket"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
